Full update and refactor for JDK 21 / Tomcat 10 / Latest releases of libraries in lib